0022688: Syntax error in file BRepOffset_Inter2d.cxx: wrong usage of brackets in comparison